objects/HealthCloudGA__CrossObjectRelationship__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__FromObject__c</fullName>
        <label>From Object</label>
        <length>99</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Relationship__c</fullName>
        <label>Relationship</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReverseRelationship__c</fullName>
        <label>Reverse Relationship</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ToObject__c</fullName>
        <label>To Object</label>
        <length>99</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Cross Object Relationship</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <columns>NAME</columns>
        <columns>HealthCloudGA__FromObject__c</columns>
        <columns>HealthCloudGA__ToObject__c</columns>
        <columns>HealthCloudGA__Relationship__c</columns>
        <columns>HealthCloudGA__ReverseRelationship__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cross Object Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Object Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>